Inceputul interfetei grafice si functia de realizare a comenzii

--- a/PizzaDelivery/PizzaDelivery/PizzaDelivery.csproj
+++ b/PizzaDelivery/PizzaDelivery/PizzaDelivery.csproj
@@ -46,14 +46,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Entities\Adresa.cs" />
+    <Compile Include="Entities\Client.cs" />
+    <Compile Include="Entities\IPretTotal.cs" />
+    <Compile Include="Entities\Pizza.cs" />
+    <Compile Include="Forms\FormComanda.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Forms\FormComanda.Designer.cs">
+      <DependentUpon>FormComanda.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Forms\FormComanda.resx">
+      <DependentUpon>FormComanda.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
