--- a/PizzaDelivery/PizzaDelivery/PizzaDelivery.csproj
+++ b/PizzaDelivery/PizzaDelivery/PizzaDelivery.csproj
@@ -62,6 +62,12 @@
     <Compile Include="Forms\FormComanda.Designer.cs">
       <DependentUpon>FormComanda.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FormFeedback.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormFeedback.Designer.cs">
+      <DependentUpon>FormFeedback.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -75,6 +81,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormComanda.resx">
       <DependentUpon>FormComanda.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormFeedback.resx">
+      <DependentUpon>FormFeedback.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
