--- a/PizzaDelivery/PizzaDelivery/PizzaDelivery.csproj
+++ b/PizzaDelivery/PizzaDelivery/PizzaDelivery.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -68,6 +69,12 @@
     <Compile Include="Forms\FormFeedback.Designer.cs">
       <DependentUpon>FormFeedback.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FormGrafic.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormGrafic.Designer.cs">
+      <DependentUpon>FormGrafic.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,6 +91,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormFeedback.resx">
       <DependentUpon>FormFeedback.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormGrafic.resx">
+      <DependentUpon>FormGrafic.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
